Added pinned messages, list of online users, and timestamps for messages
- Right click message to add to pinned message section (visible to everyone)
- Right click pinned messages to unpin messages (visible to everyone)
- List updated in real-time of currently connected users
- Timestamps added for all messages (user join/user disconnect/sent messages)

--- a/dan/webserver/static/index.html
+++ b/dan/webserver/static/index.html
@@ -1,28 +1,42 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <title>Pi Pico Chat</title>
-    <link rel="stylesheet" href="/static/styles.css">
-</head>
-<body>
+    <link rel="stylesheet" href="/static/styles.css" />
+  </head>
+  <body>
     <div id="login-screen" class="login-screen">
-        <div class="login-box">
-            <h2>Enter Username</h2>
-            <input type="text" id="username-input" placeholder="Your username">
-            <button onclick="setUsername()">Join Chat</button>
-        </div>
+      <div class="login-box">
+        <h2>Enter Username</h2>
+        <input type="text" id="username-input" placeholder="Your username" />
+        <button onclick="setUsername()">Join Chat</button>
+      </div>
     </div>
 
     <div id="chat-container" class="hidden">
-        <h1>Pi Pico Chat</h1>
-        <div id="messages"></div>
-        <div>
-            <input type="text" id="message-input" placeholder="Type your message...">
-            <button onclick="sendMessage()">Send</button>
+      <h1>Pi Pico Chat</h1>
+      <div id="chat-panel">
+        <div id="user-list-container">
+          <h3 id="user-list-header">Online Users</h3>
+          <ul id="user-list"></ul>
+          <h3 id="pinned-list-header">Pinned Messages</h3>
+          <ul id="pinned-messages"></ul>
         </div>
-        <div id="status">Connecting...</div>
+        <div id="message-panel">
+          <div id="messages"></div>
+          <div>
+            <input
+              type="text"
+              id="message-input"
+              placeholder="Type your message..."
+            />
+            <button onclick="sendMessage()">Send</button>
+          </div>
+        </div>
+      </div>
+      <div id="status">Connecting...</div>
     </div>
 
     <script src="/static/chat.js"></script>
-</body>
+  </body>
 </html>
