Added settings page, changed some gui stuff on the log in and chat page, sort of made a return to chat button. Nothing on the settings page really works, but if we want to make it work this weekend its an option.

--- a/dan/webserver/static/index.html
+++ b/dan/webserver/static/index.html
@@ -1,8 +1,9 @@
+<!-- index.html -->
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Pi Pico Chat</title>
-    <link rel="stylesheet" href="/static/styles.css" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <div id="login-screen" class="login-screen">
@@ -15,6 +16,10 @@
 
     <div id="chat-container" class="hidden">
       <h1>Pi Pico Chat</h1>
+      <!-- Settings Link -->
+      <a href="settings.html">
+        <button class="settings-button">Settings</button>
+      </a>
       <div id="chat-panel">
         <div id="user-list-container">
           <h3 id="user-list-header">Online Users</h3>
@@ -36,7 +41,11 @@
       </div>
       <div id="status">Connecting...</div>
     </div>
-
-    <script src="/static/chat.js"></script>
+    <script src="chat.js"></script>
   </body>
+  <footer>
+    <p>Doomsday Area Network</p>
+  </footer>
+
+
 </html>
