--- a/dan/webserver/static/index.html
+++ b/dan/webserver/static/index.html
@@ -1,9 +1,8 @@
-<!-- index.html -->
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <title>Pi Pico Chat</title>
-    <link rel="stylesheet" href="../static/styles.css" />
+    <link rel="stylesheet" href="/static/styles.css" />
   </head>
   <body>
     <div id="login-screen" class="login-screen">
@@ -16,10 +15,6 @@
 
     <div id="chat-container" class="hidden">
       <h1>Pi Pico Chat</h1>
-      <!-- Settings Link -->
-      <a href="/settings">
-        <button class="settings-button">Settings</button>
-      </a>
       <div id="chat-panel">
         <div id="user-list-container">
           <h3 id="user-list-header">Online Users</h3>
@@ -41,11 +36,7 @@
       </div>
       <div id="status">Connecting...</div>
     </div>
-    <script src="../static/chat.js"></script>
+
+    <script src="/static/chat.js"></script>
   </body>
-  <footer>
-    <p>Doomsday Area Network</p>
-  </footer>
-
-
 </html>
